--- a/src/main/resources/static/Company/icons-feather.html
+++ b/src/main/resources/static/Company/icons-feather.html
@@ -18,7 +18,7 @@
     />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link rel="shortcut icon" href="img/icons/icon-48x48.png" />
+    <link rel="shortcut icon" href="/img/icons/icon-48x48.png" />
 
     <link
       rel="canonical"
@@ -27,7 +27,7 @@
 
     <title>Feather | AdminKit Demo</title>
 
-    <link href="/static/css/app.css" rel="stylesheet" />
+    <link href="/css/app.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap"
       rel="stylesheet"
