--- a/src/main/resources/static/Company/index.html
+++ b/src/main/resources/static/Company/index.html
@@ -24,7 +24,7 @@
 
     <title>AdminKit Demo - Bootstrap 5 Admin Template</title>
 
-    <link href="/static/css/app.css" rel="stylesheet" />
+    <link href="/css/app.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap"
       rel="stylesheet"
