--- a/src/main/resources/static/Company/pages-blank.html
+++ b/src/main/resources/static/Company/pages-blank.html
@@ -27,7 +27,7 @@
 
     <title>Blank Page | AdminKit Demo</title>
 
-    <link href="/static/css/app.css" rel="stylesheet" />
+    <link href="/css/app.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap"
       rel="stylesheet"
