--- a/src/main/resources/static/User/V3/dashboard.html
+++ b/src/main/resources/static/User/V3/dashboard.html
@@ -384,19 +384,19 @@
               <div class="col-md-3 col-sm-6 mb-3 d-flex">
                 <div class="card card-custom card-green card-shadow flex-fill">
                   TOTAL RESUMES<br />
-                  <span style="font-size: 2rem">0</span>
+                  <span style="font-size: 2rem" th:text="${totalResumes}">0</span>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 mb-3 d-flex">
                 <div class="card card-custom card-blue card-shadow flex-fill">
                   APPROVED RESUMES<br />
-                  <span style="font-size: 2rem">0</span>
+                  <span style="font-size: 2rem" th:text="${approvedResumes}">0</span>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 mb-3 d-flex">
                 <div class="card card-custom card-blue card-shadow flex-fill">
                   BOOKMARKED<br />
-                  <span style="font-size: 2rem">0</span>
+                  <span style="font-size: 2rem" th:text="${applied}">0</span>
                 </div>
               </div>
               <div class="col-md-3 col-sm-6 mb-3 d-flex">
@@ -406,6 +406,8 @@
                 </div>
               </div>
             </div>
+
+
             <div class="row mt-4">
               <div class="card col-md-6 mb-3">
                 <div class="recent-activities">
@@ -427,6 +429,7 @@
             </div>
           </div>
         </main>
+
 
         <footer class="footer">
           <div class="container-fluid">
