chuyển trang + lưu
chuyển trang + lưu

--- a/src/main/resources/static/User/V3/profile.html
+++ b/src/main/resources/static/User/V3/profile.html
@@ -409,7 +409,7 @@
                   <div class="error" id="fullNameError"></div>
                 </div>
                 <div class="col-md-6 mb-3">
-                  <label class="form-label" for="dob">Ngày sinh</label>
+                  <label class="form-label" for="dateOfBirth">Ngày sinh</label>
                   <input
                     class="form-control"
                     id="dateOfBirth"
